--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/nisaelkdb?useSSL=false
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/nisaelekdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
